# C-Script

./: .gitignore  Cargo.toml  README.md  build.sh  dune-project  grammar.g4  makefile  test.rss
_build/: .db  .digest-db  log
_build/default/: README.md  rs_script.dune-package  rs_script.install
_build/default/.dune/: configurator  (+1 more)
docs/: arithmetic.md  boolean.md  cflo.md  comments.md  cst.md  debug.md  exit.md  functions.md  keywords.md  loops.md  main.md  math_functions.md  operators.md  print.md  rss.md  strings.md  variables.md
examples/: arith.csf  arith.rss  control_flow.csf  func.csf  func.rss  funcs.rss  funcs.rssc  import.csf  labels.rss  logic.rss  loops.rss  math.rss  math.rssc  nested.rss  print.rss  procs.rss  recurse.rss  strings.rss  struct.csf  switch.rss  test.csf  test.rss  variables.rss
include/: ast.hpp  checker.hpp  compiler.hpp  error_handler.hpp  interpreter.hpp  lexer.hpp  parser.hpp  scope.hpp  token.hpp  types.hpp
lib/: ast.ml  dune  interp.ml  lexer.ml  parser.ml  parser.mly  repl.ml
src/: ast.cpp  ast.ml  bytecode.rs  compile.ml  compile.rs  compiler.cpp  compiler.ml  dune  grammar.pest  interp.ml  interp.rs  interpreter.cpp  keywords.rs  lexer.cpp  lexer.ml  lexer.mll  lib.rs  main.cpp  main.rs  parser.cpp  parser.ml  parser.mli  parser.mly  read_file.ml  scope.cpp  scope.ml
src/ast/: mod.rs
src/checker/: mod.rs
src/error_handler/: mod.rs
src/function/: mod.rs
src/interp/: mod.rs
src/keywords/: mod.rs
src/parser/: grammar.ebnf  mod.rs
src/tokenizer/: mod.rs
src/types/: mod.rs
src/var_func/: mod.rs
test/: dune
(+65 files in other folders)
