[package]
name = "rss"
version = "0.1.0"
edition = "2021"

[dependencies]
# llvm-ir = { version = "0.11.1", features = ["llvm-17", "prefer-dynamic"] }
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
llvm-sys-170 = { package = "llvm-sys", version = "170.0.0", features = ["prefer-dynamic"] }
rand = "0.8.5"
