[package]
name = "rss"
version = "0.1.0"
edition = "2021"

[dependencies]
peginator = "0.7.0"
peginator_macro = "0.7.0"
rand = "0.8.5"
regex = "1.10.6"

[target.'cfg(unix)'.dependencies]
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
llvm-sys-170 = { package = "llvm-sys", version = "170.0.0", features = ["prefer-dynamic"] }
